# ts

./: LICENSE  README.md  ts.cabal
samples/: att.csv  ge.csv  ibm.csv  xom.csv
src/: Main.hs  Query.hs
