name:                ts
version:             0.1.0
license:             MIT
license-file:        LICENSE
author:              Stephen Diehl
maintainer:          stephen.m.diehl@gmail.com
copyright:           2014 Stephen Diehl
Category:            Database
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  
  cbits/ts.h

executable db
  main-is:            Main.hs
  ghc-options:        -Wall -O2 -fwarn-tabs
  cc-options:         -funroll-loops
  build-depends:      
    base   >= 4.6  && <4.8,
    vector >= 0.10 && <0.11,
    mmap   >= 0.5  && <0.6,
    spool  == 0.1
  default-language:   Haskell2010
  Hs-source-dirs:     src
  Include-dirs:       cbits

  C-sources:
    cbits/ts.c
